--- a/.github/workflows/actualitzar.yml
+++ b/.github/workflows/actualitzar.yml
@@ -29,6 +29,6 @@ jobs:
         run: |
           git config --global user.name "Bot Actualitzador"
           git config --global user.email "bot@github.com"
-          git add index.html
-          git commit -m "Actualització automàtica de la llista" || exit 0
+          git add .  # EL PUNT ÉS CLAU: Afegeix el fitxer de memòria també
+          git commit -m "Actualització automàtica" || exit 0
           git push
