--- a/.github/workflows/actualitzar.yml
+++ b/.github/workflows/actualitzar.yml
@@ -2,7 +2,16 @@ name: Actualitzar Llista TV
 
 on:
   schedule:
-    - cron: '*/15 * * * *' # Això s'executa cada hora en punt.
+    # 1. HORARI NOCTURN (Estalvi de recursos)
+    # De 02:00 AM a 09:00 AM (hora nostra CET) s'executa cada 2 hores.
+    # En UTC (GitHub) això equival a les: 01:00, 03:00, 05:00, 07:00
+    - cron: '0 1,3,5,7 * * *'
+
+    # 2. HORARI DIÜRN (Ritme normal)
+    # De 10:00 AM a 01:30 AM (hora nostra CET) s'executa cada 30 minuts.
+    # En UTC (GitHub) això equival a: de les 09:00 fins a les 00:30
+    - cron: '*/30 9-23,0 * * *'
+
   workflow_dispatch: # Això permet que li donis a un botó per actualitzar manualment si vols
 
 jobs:
@@ -29,6 +38,6 @@ jobs:
         run: |
           git config --global user.name "Bot Actualitzador"
           git config --global user.email "bot@github.com"
-          git add .  # EL PUNT ÉS CLAU: Afegeix el fitxer de memòria també
+          git add .  # El punt afegeix TOTS els fitxers (inclosa la memòria)
           git commit -m "Actualització automàtica" || exit 0
           git push
