--- a/.github/workflows/actualitzar.yml
+++ b/.github/workflows/actualitzar.yml
@@ -2,11 +2,11 @@ name: Actualitzar Futbol
 
 on:
   schedule:
-    - cron: '0 */4 * * *' # Cada 4 hores
-  workflow_dispatch: # Botó manual
+    - cron: '0 */4 * * *'
+  workflow_dispatch:
 
 permissions:
-  contents: write # ⚠️ IMPRESCINDIBLE: Dóna permís al bot per guardar canvis
+  contents: write
 
 jobs:
   build:
@@ -15,8 +15,6 @@ jobs:
     steps:
       - name: 📥 Baixar el codi
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 # Baixa tot l'historial per evitar conflictes
 
       - name: 🐍 Configurar Python
         uses: actions/setup-python@v4
@@ -26,40 +24,24 @@ jobs:
       - name: 📦 Instal·lar llibreries
         run: pip install requests
 
-      - name: 🚀 Executar Generador
+      - name: 🚀 GENERAR WEB (Mètode Redirecció)
         env:
           API_URL: ${{ secrets.API_URL }}
           API_URL_PPV: ${{ secrets.API_URL_PPV }}
-        run: python generator.py
+        # AQUESTA ÉS LA LÍNIA MÀGICA:
+        run: python generator.py > index.html
 
-      - name: 🔍 DIAGNÒSTIC - Verificar fitxer
+      - name: 🔍 VERIFICAR ARXIU (Debug)
         run: |
-          echo "---- LLISTAT DE FITXERS GENERATS ----"
-          ls -la
-          echo "---- MIDA DEL INDEX.HTML ----"
-          if [ -f index.html ]; then
-            du -h index.html
-            echo "---- PRIMERES 20 LÍNIES DEL INDEX.HTML ----"
-            head -n 20 index.html
-          else
-            echo "❌ ERROR: El fitxer index.html NO existeix!"
-            exit 1
-          fi
+          echo "Mida del fitxer index.html:"
+          ls -l index.html
+          echo "Primeres 10 línies:"
+          head -n 10 index.html
 
-      - name: 💾 Guardar i Pujar (NUCLEAR PUSH)
+      - name: 💾 Guardar i Pujar
         run: |
           git config --global user.name "GitHub Action Bot"
           git config --global user.email "action@github.com"
-          
-          # Afegim tot el que hagi canviat
-          git add .
-          
-          # Comprovem estat
-          echo "---- ESTAT DE GIT ABANS DEL COMMIT ----"
-          git status
-          
-          # Fem commit (si falla perquè no hi ha canvis, no passa res)
-          git commit -m "Auto-update: Nous partits ⚽" || echo "⚠️ No hi ha canvis nous."
-          
-          # Forcem la pujada a la branca principal (detecta si és main o master)
-          git push origin HEAD:${{ github.ref_name }}
+          git add index.html memoria_partits.json
+          git commit -m "Auto-update ⚽" || echo "No changes"
+          git push
