--- a/.github/workflows/actualitzar.yml
+++ b/.github/workflows/actualitzar.yml
@@ -2,8 +2,8 @@ name: Actualitzar Futbol
 
 on:
   schedule:
-    - cron: '0 */4 * * *'
-  workflow_dispatch:
+    - cron: '0 */4 * * *' # Executar cada 4 hores
+  workflow_dispatch: # Botó manual
 
 permissions:
   contents: write
@@ -24,17 +24,17 @@ jobs:
       - name: 📦 Instal·lar llibreries
         run: pip install requests
 
-      - name: 🚀 GENERAR WEB
+      - name: 🚀 GENERAR WEB I ACTUALITZAR MEMÒRIA
         env:
           API_URL: ${{ secrets.API_URL }}
-          API_URL_PPV: ${{ secrets.API_URL_PPV }}
-        # LA CLAU DE L'ÈXIT: Redirecció >
+        # Redirecció màgica: El que surt per print() va a index.html
         run: python generator.py > index.html
 
-      - name: 💾 Guardar i Pujar
+      - name: 💾 Guardar i Pujar (Web + Memòria)
         run: |
           git config --global user.name "GitHub Action Bot"
           git config --global user.email "action@github.com"
+          # Guardem tant la web com la base de dades JSON
           git add index.html memoria_partits.json
           git commit -m "Auto-update ⚽" || echo "Sense canvis nous"
           git push
